# frappe-jalali-shamsi-datepicker

./: README.md  pyproject.toml
jalali_shamsi_datepicker/: hooks.py
jalali_shamsi_datepicker/public/js/: persian-date-handler.js
